--- a/asset/css/custom-bs4-4.css
+++ b/asset/css/custom-bs4-4.css
@@ -4004,10 +4004,10 @@ input[type=button].btn-block,input[type=reset].btn-block,input[type=submit].btn-
     width: 100%;
     height: 1.4rem;
     padding: 0;
-    background-color: transparent;
+    background-color: #6e54ad00;
     -webkit-appearance: none;
     -moz-appearance: none;
-    appearance: none
+    appearance: none;
 }
 
 .custom-range:focus {
@@ -5440,7 +5440,7 @@ a.badge-dark.focus,a.badge-dark:focus {
     -ms-flex-direction: column;
     flex-direction: column;
     padding-left: 0;
-    margin-bottom: 0
+    margin-bottom: 0;
 }
 
 .list-group-item-action {
@@ -5471,7 +5471,7 @@ a.badge-dark.focus,a.badge-dark:focus {
 
 .list-group-item:first-child {
     border-top-left-radius: .25rem;
-    border-top-right-radius: .25rem
+    border-top-right-radius: .25rem;
 }
 
 .list-group-item:last-child {
@@ -7214,7 +7214,7 @@ a.bg-dark:focus,a.bg-dark:hover,button.bg-dark:focus,button.bg-dark:hover {
 
 .justify-content-between {
     -ms-flex-pack: justify!important;
-    justify-content: space-between!important
+    justify-content: space-between!important;
 }
 
 .justify-content-around {
