--- a/asset/css/ui.css
+++ b/asset/css/ui.css
@@ -2063,6 +2063,9 @@ transition-duration: 0.3s;
   padding: 20px;
 }
 
+.top-store {}
+.top-search {margin: auto;}
+.filters{padding: 60px;/* width: 47px; */}
 .custom-breadcrumb {
 
 background: 0;
